# sports-predictor-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  test-plan-pr2.md  test-report-pr2.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_raw_ingestion.py  0003_monitoring_snapshots.py  0004_backtest_clv.py  0005_risk_policies.py
backend/app/: __init__.py  config.py  logging.py  main.py  scheduler.py
backend/app/api/: __init__.py  admin.py  backtests.py  events.py  explain.py  health.py  models.py  monitoring.py  predictions.py  risk.py  sports.py  value_bets.py
backend/app/backtesting/: __init__.py  engine.py  walk_forward.py
backend/app/db/: base.py  models.py  session.py
backend/app/features/: __init__.py  football.py
backend/app/ingestion/: __init__.py  api_football.py  base.py  demo.py  football_data_csv.py  football_data_org.py  orchestrator.py  registry.py  stubs.py  team_names.py  the_odds_api.py
backend/app/metrics/: __init__.py  calibration.py
backend/app/ml/: __init__.py  calibration.py  corners_cards.py  ensemble.py  explain.py  gbm.py  poisson.py  predictor.py  trainer.py
backend/tests/: conftest.py  test_api.py  test_api_football.py  test_backtest.py  test_calibration.py  test_clv.py  test_corners_cards.py  test_demo_ingestion.py  test_features.py  test_football_data_adapter.py  test_football_data_csv.py  test_models_api.py  test_monitoring_alerts.py  test_monitoring_api.py  test_monitoring_drift.py  test_monitoring_performance.py  test_new_markets_is_win.py  test_odds_history.py  test_poisson.py  test_risk_manager.py  test_shap.py  test_the_odds_api_adapter.py  test_value_bet.py  test_walk_forward.py
(+53 files in other folders)
